--- a/.github/workflows/r30.yml
+++ b/.github/workflows/r30.yml
@@ -77,4 +77,4 @@ jobs:
       - name: "Install arrow"
         run: Rscript 'arrow.R'
       - name: "Script - Run"
-        run: Rscript 'get_audiences.R' 30 "CZ"
+        run: Rscript 'get_audiences.R' 30 "AL"
